Repopulate requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,13 @@
-langchain==0.0.101
-torch==1.12.1
-torchvision==0.13.1
-gradio==3.20.1
-openai
-accelerate
-addict
-albumentations
-basicsr
-controlnet-aux
+controlnet_aux
 diffusers
-einops
-imageio
-imageio-ffmpeg
-invisible-watermark
-kornia
+gradio
+langchain
+llama_index
 numpy
-omegaconf
-open_clip_torch
 openai
-opencv-python
-prettytable
-safetensors
-streamlit
-test-tube
-timm
-torchmetrics
+opencv_python
+Pillow
+requests
+scipy
+torch
 transformers
-webdataset
-yapf
